--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Rosa",
   "license": "GPL-2.0",
   "dependencies": {
-    "discord.js": "^14.16.3"
+    "@discord-player/extractor": "^4.5.1",
+    "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.3.5",
+    "discord.js": "^14.16.3",
+    "ffmpeg-static": "^5.2.0",
+    "mediaplex": "^0.0.9"
   }
 }
