--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "deployCommands": "node deploy-commands.js",
-    "bot": "node index.js"
+    "bot": "node index.js",
+    "all": "node api.js"
   },
   "author": "Rosa",
   "license": "GPL-2.0",
@@ -14,6 +15,7 @@
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.4.2",
     "discord.js": "^14.18.0",
+    "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
     "mediaplex": "^0.0.9"
   }
