--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "musicbot",
   "version": "1.0.0",
   "description": "Music bot",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "deployCommands": "node deploy-commands.js",
-    "bot": "node index.js",
-    "all": "node api.js"
+    "build": "npx tsc",
+    "deployCommands": "npx ts-node deploy-commands.ts",
+    "bot": "npx ts-node index.ts",
+    "all": "npx ts-node api.ts"
   },
   "author": "Rosa",
   "license": "GPL-2.0",
   "dependencies": {
     "@discord-player/extractor": "^4.5.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.5",
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.4.2",
     "discord.js": "^14.18.0",
     "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
-    "mediaplex": "^0.0.9"
+    "mediaplex": "^0.0.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
